fix: fix the elements shifting issue on win cells

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ button:active {
 }
 
 .win-cell {
-  font-size: 130%;
+  font-size: 120%;
   color: var(--sec-font);
 }
 
